--- a/src/components/Main/Sidebar/sidebar.css
+++ b/src/components/Main/Sidebar/sidebar.css
@@ -31,6 +31,7 @@
 .Sidebar .recent{
     display: flex;
     flex-direction:column;
+    animation: fadeIn 1.5s;
 }
 .Sidebar .recent-title{
     margin-top: 30px;
@@ -53,7 +54,7 @@
 .Sidebar .bottom{
     display: flex;
     flex-direction: column;
-    margin-bottom: -0px; /* Removed extra space below bottom component */
+    margin-bottom: -0px; 
 }
 
 .Sidebar .bottom-item{
